[tool.poetry]
name = "tryceratops"
version = "0.2.5"
description = "A linter to manage your exception like a PRO!"
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = "MIT"
keywords = ["lint", "try", "except"]
readme = "README.md"
homepage = "https://github.com/guilatrova/tryceratops"
repository = "https://github.com/guilatrova/tryceratops"
include = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
packages = [
    { include = "tryceratops", from = "src" },
]

[tool.poetry.scripts]
tryceratops = 'tryceratops.__main__:main'

[tool.poetry.plugins."flake8.extension"]
TC = "tryceratops.flake_plugin:TryceratopsAdapterPlugin"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^20.8b1"
isort = "^5.8.0"
pre-commit = "^2.13.0"
astpretty = "^2.1.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
extra_standard_library = ["pytest", "toml", "click"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
