[tool.poetry]
name = "tryceratops"
version = "2.3.1"
description = "Prevent Exception Handling AntiPatterns"
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = "MIT"
keywords = ["lint", "try", "except"]
readme = "README.md"
homepage = "https://github.com/guilatrova/tryceratops"
repository = "https://github.com/guilatrova/tryceratops"
include = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
packages = [
    { include = "tryceratops", from = "src" },
]

[tool.poetry.scripts]
tryceratops = 'tryceratops.__main__:main'

[tool.poetry.plugins."flake8.extension"]
TRY = "tryceratops.flake_plugin:TryceratopsAdapterPlugin"

[tool.poetry.urls]
"Changelog" = "https://github.com/guilatrova/tryceratops/blob/main/CHANGELOG.md"


[tool.semantic_release]
version_variable = [
    "src/tryceratops/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_pattern = [
    "README.md:rev: v{version}",
    "docs/CONTRIBUTING.md:tryceratops, version {version}"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
click = ">=7"
toml = ">=0.10.2"
rich = ">=10.14.0"
typing-extensions = { version = ">=4.5.0", python = "<3.10" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^2.12.1"
flake8 = "^6.0.0"
flake8-annotations = "^3.0.1"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^2.13.0"
astpretty = "^3.0.0"
python-semantic-release = "^7.33.5"
mypy = "^1.3.0"
types-toml = "^0.1.3"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
extra_standard_library = ["pytest", "toml", "click", "typing_extensions"]

[tool.mypy]
python_version = 3.8
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = 'tests'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
