[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tryceratops"
author = "Guilherme Latrova"
author-email = "hello@guilatrova.dev"
home-page = "https://github.com/guilatrova/tryceratops"
classifiers = [ "License :: OSI Approved :: MIT License",]
